<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:layout_gravity="left"
    android:background="@color/colorAccent"
    tools:context="com.jakester.twitterapp.activities.LoginActivity" >

    <TextView
        android:id="@+id/tv_login_to_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/primaryTextColor"
        android:textSize="24dp"
        android:textStyle="bold"
        android:text="@string/login_text"/>

    <TextView
        android:id="@+id/tv_username_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16dp"
        android:text="@string/username_label"/>

    <EditText
        android:id="@+id/et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:theme="@style/LoginEditTextStyle"
        android:textSize="16dp"
        android:layout_marginBottom="6dp"/>

    <TextView
        android:id="@+id/tv_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryTextColor"
        android:textSize="16dp"
        android:text="@string/password_label"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:textColor="@color/primaryTextColor"
        android:theme="@style/LoginEditTextStyle"
        android:textSize="16dp"
        android:layout_marginBottom="12dp"/>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/secondaryTextColor"
        android:layout_gravity="center"
        android:onClick="forgotPassword"
        android:textSize="16dp"
        android:text="@string/forgot_password"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="right"
        android:layout_margin="20dp"
        android:textColor="@color/colorAccent"
        android:onClick="loginToRest"
        android:background="@drawable/twitter_button"
        android:text="@string/login_label" />

</LinearLayout>